stretch image to cover vw, fix header

--- a/news-explorer/src/components/Footer/Footer.css
+++ b/news-explorer/src/components/Footer/Footer.css
@@ -18,12 +18,6 @@
   line-height: 1.37;
 }
 
-.footer__link-container {
-}
-
-.footer__social-container {
-}
-
 .footer__link {
   text-decoration: none;
   color: black;
